--- a/package.json
+++ b/package.json
@@ -1,21 +1,56 @@
 {
-  "name": "addon-analise-combinatoria",
+  "name": "combinatorial-analysis-addon",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist",
+    "build"
+  ],
   "scripts": {
-    "dev": "ts-node-dev --transpile-only ./src/combinations.ts",
-    "build": "rm -rf ./dist/ && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf ./dist/ && npm run build:c && tsc",
+    "build:c": "node-gyp clean configure build",
+    "lint": "eslint 'src/**/*'",
+    "lint:fix": "eslint --fix 'src/**/*'",
+    "test": "npm run build:c && NODE_ENV=test jest --coverage --silent --passWithNoTests",
+    "test:debug": "npm run build:c && NODE_ENV=test jest --coverage",
+    "test:c": "gcc -o ./src/addon/combinations ./src/addon/test.c && ./src/addon/combinations",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": [
+      "yarn lint"
+    ]
   },
   "gypfile": true,
-  "keywords": [],
-  "author": "",
+  "keywords": ["C Lang", "C", "C/C++", "Addon", "Node", "Combinatorial Analysis", "Typescript"],
+  "author": "Guilherme Severo",
   "license": "ISC",
   "dependencies": {
     "node-addon-api": "^7.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "node-gyp": "^10.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@https://github.com/GuilhermeSevero/combinatorial-analysis-addon.git"
+  },
+  "bugs": {
+    "url": "https://https://github.com/GuilhermeSevero/combinatorial-analysis-addon/issues"
+  },
+  "homepage": "https://https://github.com/GuilhermeSevero/combinatorial-analysis-addon#readme"
 }
